# django-project-package-template

./: .gitignore  MANIFEST.in  README.md  manage.py-tpl  project_name.sublime-project  setup.cfg
src/project_name/: __init__.py-tpl
src/project_name/conf/: settings.py-tpl  urls.py-tpl  wsgi.py-tpl
