[bdist_wheel]
universal = 1

[metadata]
name = {{ project_name }}
version = attr:{{ project_name }}.__version__
description = Describe your project in one sentence.
long_description = file: README.md
author = {{ project_name }} team
author_email = development@example.com
url = https://www.example.com/
license = Other/Proprietary License
# If you use a license file activate the line below.
# license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    django=={{ django_version }}
python_requires = >=3.5

[options.entry_points]
console_scripts =
    django-project=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    check-manifest==0.37
    django-debug-toolbar==1.10.1
    ipython==7.1.1

[options.packages.find]
where =
    src
