[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py

[metadata]
name = {{ project_name }}
version = attr:{{ project_name }}.__version__
description = Describe your project in one sentence.
long_description = file: README.md
long_description_content_type = text/markdown
author = {{ project_name }} team
author_email = development@example.com
url = https://www.example.com/
license = Other/Proprietary License
# If you use a license file activate the line below.
# license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: {{ docs_version }}
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    # Remove the line below if you want to publish your project on PyPI.
    Private :: Do Not Upload
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    django=={{ django_version }}
    envparse==0.2.0
python_requires = >=3.5

[options.entry_points]
console_scripts =
    django-project=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    check-manifest==0.37
    django-debug-toolbar==1.11
    ipython==8.9.0

[options.packages.find]
where =
    src
